<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawable_layout_profile"
    tools:context=".ProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/register" />

        <EditText
            android:id="@+id/name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/common_google_signin_btn_text_light_default" />

        <EditText
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:layout_below="@+id/name"
            android:id="@+id/ICNo"
            android:inputType="number"
            android:hint="@string/ICNo"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:maxLength="12"/>


        <EditText
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:id="@+id/telNo"
            android:layout_margin="10dp"
            android:layout_below="@+id/ICNo"
            android:padding="20dp"
            android:hint="@string/telNo"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:inputType="number"
            android:maxLength="11"/>


        <EditText
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/telNo"
            android:padding="20dp"
            android:id="@+id/trustedTelNo"
            android:inputType="number"
            android:hint="@string/trustedTelNo"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:maxLength="11"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:onClick="btnUpdate_Click"
            android:layout_below="@+id/trustedTelNo"
            android:padding="25dp"
            android:text="@string/btnUpdate"
            android:textColor="#154AF1"
            android:textSize="15sp"
            android:background="@drawable/button"/>




        <include
            android:id="@+id/main_page_toolbar"
            layout="@layout/app_bar_layout"

            >

        </include>


        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            >


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_users_post_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </FrameLayout>


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginBottom="3dp"
        app:menu="@menu/navigation_menu"
        >

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>